# suspicious-scanner

./: README.md  readme.txt
src/: CMakeLists.txt  logger.h  logger_entry.h  main.cpp  scanner.h  validator.h  validator_code.h  validator_rule.h
